yaml_dir/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test3
spec:
  os: { name: linux }
  nodeSelector:
    kubernetes.io/os: linux
  containers:
  - name: my-app
    image: 10.129.27.120:5000/forward_app
    imagePullPolicy: Always
    ports:
    - containerPort: 9376        
    resources:
      limits:
        cpu: "0.5"
        memory: "512Mi"
    command: ["sleep", "infinity"]
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
            - key: kubernetes.io/hostname
              operator: In
              values:
              - desktop-1r9ipqa
