yaml_dir/pod1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test1
spec:
  os: { name: linux }
  nodeSelector:
    kubernetes.io/os: linux
  containers:
  - name: test
    image: ananthkidambi/cs695:test_app
    imagePullPolicy: IfNotPresent
    volumeMounts:
    - mountPath: /foo
      name: example-volume
    command: [ "/bin/bash", "-c", "--" ]
    args: [ "sleep infinity" ]
  volumes:
  - name: example-volume
    # mount /data/foo, but only if that directory already exists
    hostPath:
      path: /home/jvaditya/clown # directory location on host
      type: Directory # this field is optional
