yaml_dir/pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test2
spec:
  os: { name: linux }
  nodeSelector:
    kubernetes.io/os: linux
  containers:
  - name: my-app
    image: ubuntu:latest
    imagePullPolicy: Always
    ports:
    - containerPort: 9376        
    resources:
      limits:
        cpu: "0.5"
        memory: "512Mi"
    command: ["sleep", "infinity"]
