yaml_dir/service.yaml
# create a service with atleast 2 replicas

apiVersion: v1
kind: Service
metadata:
  name: my-service1
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
  type: ClusterIP
